fixed the CSS to make the screen showing in the rigth order, make the alpaca jump

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body {
 #game-screen,
 #game-end {
     width: 100%;
-    height: 100vh;
+    height: 470px;
     display: none;
 }
 
@@ -22,6 +22,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* background-color: #fdf2d5; */
 }
 
 .logo-img {
@@ -35,16 +36,19 @@ body {
     text-align: center;
 }
 
-#start-button {
+#start-button,
+#restart-button {
     background-color: #f17445;
     color: #fdf2d5;
-    border: none;
+    /* border: 3px solid #80502c;*/
+    border: none; 
     padding: 10px 20px;
     font-size: 25px;
     border-radius: 5px;
     margin-top: 20px;
     font-family: "Poppins", sans-serif;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .start-page-alpaca {
@@ -63,14 +67,13 @@ body {
 /* allow the clouds to move freely + applies an animation */
 .cloud {
   position: absolute;
-  width: 60px;
   animation: cloudMove 8s linear infinite;
 }
 
 /* adds the position and the speed */
-.c1 { top: 10px; animation-duration: 18s; }
-.c2 { top: 80px; animation-duration: 25s; }
-.c3 { top: 200px; animation-duration: 38s; }
+.c1 { top: 10px; width: 80px; animation-duration: 18s; }
+.c2 { top: 80px; width: 30px; animation-duration: 25s; }
+.c3 { top: 200px; width: 60px; animation-duration: 38s; }
 
 /* this is the animation */
 @keyframes cloudMove {
@@ -91,6 +94,16 @@ body {
     height: auto;
 }
 
+#score {
+    position: absolute;
+    top: 20px;     
+    right: 20px;     
+    font-size: 24px;
+    font-weight: bold;
+    color: #5b4842;    
+}
+
+
 #ground {
     position: absolute;
     bottom: 0;
@@ -99,12 +112,37 @@ body {
     background-image: url('../images/ground.png');
     background-repeat: repeat-x;
     background-size: auto 100%; 
-    z-index: 10;
+    z-index: 1;
 }
 
 #game-end {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: none;
+    align-items: center;           
+    justify-content: center;       
+    height: 100vh;
+    background-color: #fdf2d5;
+}
+
+.game-over-content {
+    display: flex;
+    align-items: center;           
+    gap: 50px;                     
+}
+
+.game-over-text {
+    display: flex;
+    flex-direction: column;        
+    align-items: flex-start;      
+    gap: 20px;
+}
+
+.game-over-text h1 {
+    font-size: 48px;
+    margin: 0;
+    color: #5b4842;
+}
+
+.alpaca-resting {
+    height: 400px;                 
+    width: auto;
 }
